# TIF2Tiles

./: .gitignore  OFFLINE_GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-macos-dual-arch.sh  build-release.sh  bundle-gdal-macos.sh  bundle-gdal-windows.ps1  ensure-oss-keys.mjs  offline-install.sh  prepare-offline-kit.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json
src-tauri/src/: gdal_pipeline.rs  lib.rs  main.rs  oss_upload.rs  progress_event.rs  tif_inspector.rs
src/config/: oss-keys.local.example.ts
