[package]
name = "giff-tif-tile-tool"
version = "0.1.0"
description = "Desktop TIFF tiling tool powered by GDAL"
authors = ["GIFF"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "giff_tif_tile_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rayon = "1.10"
percent-encoding = "2"

